configs/setup/envoy-gateway/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-metallb
  annotations:
    metallb.universe.tf/address-pool: bgp-pool
    loadBalancerIP: 172.19.0.254
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 172.19.0.254
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer
  externalTrafficPolicy: Local
