configs/setup/envoy-gateway/example.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: test-service
    service: test-service
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: test-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-service
      version: v1
  template:
    metadata:
      labels:
        app: test-service
        version: v1
    spec:
      serviceAccountName: test-service
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: test-service
          ports:
            - containerPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-service
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: test-service
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
